[package]
name = "btrfs-usage-monitor"
version = "0.1.1"
authors = ["willemw12 <willemw12@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A simple BTRFS usage monitor"
homepage = "https://github.com/willemw12/btrfs-usage-monitor"
repository = "https://github.com/willemw12/btrfs-usage-monitor"
readme = "README.md"
keywords = ["btrfs"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
#version = "3"
version = "3.0.0-beta.1"
default-features = false
features = [ "derive", "std" ]

[dependencies]
anyhow = "1"
regex = "1"
