[package]
name = "btrfs-usage-monitor"
version = "0.1.2"
authors = ["willemw12 <willemw12@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A simple Btrfs disk space usage monitor"
homepage = "https://github.com/willemw12/btrfs-usage-monitor"
repository = "https://github.com/willemw12/btrfs-usage-monitor"
readme = "README.md"
keywords = ["btrfs"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
regex = "1.5.5"

[dependencies.clap]
version = "3.1.6"
default-features = false
features = [ "cargo", "derive", "std" ]
